# hacking

./: pyproject.toml
src/attrib_loss/: scratch.ipynb  scratch.py
src/neuronpedia_api/: neuronpedia_api.py
src/othello_gpt/: scratch.py
src/othello_gpt/wandb/: latest-run
src/othello_gpt/wandb/run-20240503_124848-salufadb/: run-salufadb.wandb
src/othello_gpt/wandb/run-20240503_124848-salufadb/files/: config.yaml  wandb-metadata.json
src/othello_gpt/wandb/run-20240503_125102-8umv2c0a/: run-8umv2c0a.wandb
src/othello_gpt/wandb/run-20240503_125102-8umv2c0a/files/: config.yaml  requirements.txt  wandb-metadata.json
src/othello_gpt/wandb/run-20240503_125152-p9z5r15g/: run-p9z5r15g.wandb
src/othello_gpt/wandb/run-20240503_125152-p9z5r15g/files/: config.yaml  wandb-metadata.json
src/othello_gpt/wandb/run-20240503_125355-hncln55g/: run-hncln55g.wandb
src/othello_gpt/wandb/run-20240503_125355-hncln55g/files/: config.yaml  wandb-metadata.json
src/superposition/: base.py  scratch.py  scratch_2.py  utils.py  vanilla.py
src/superposition/wandb/: latest-run
src/superposition/wandb/run-20240508_111952-5km7cw3r/: run-5km7cw3r.wandb
src/superposition/wandb/run-20240508_111952-5km7cw3r/files/: config.yaml  requirements.txt  (+1 more)
src/tms/: scratch.ipynb  scratch.py
wandb/: latest-run
wandb/run-20240503_125056-6wrbs57e/: run-6wrbs57e.wandb
wandb/run-20240503_125056-6wrbs57e/files/: config.yaml  wandb-metadata.json
wandb/run-20240503_125650-262hz5b3/: run-262hz5b3.wandb
wandb/run-20240503_125650-262hz5b3/files/: config.yaml  wandb-metadata.json
