[project]
name = "hacking"
version = "0.1.0"
description = "Hacking for MATS"
authors = [
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "transformer-lens>=1.17.0",
    "ipykernel>=6.29.4",
    "sae-lens>=1.3.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.2",
    "seaborn>=0.13.2",
    "einops>=0.7.0",
    "tqdm>=4.66.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
